# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased]

### Changed

- Mana por nível das classes `Mago` e `Arquimago` foi aumentado de `10` para `15`
- Mana por nível da classe `Ilusionista` foii amentada de `8` para `10`
- **Habilidades:**
  - *Imbuir em Veveno*: Dano base `20` -> `40`. Escala com Inteligencia `50%` -> `80%`. Dano por Nível `30` -> `60`
  - *Golpes Destemidos*: Dano base `18` -> `34`. Escala com Inteligência `50%` -> `70%`
  - *Atrás de Você*: Dano base `17` -> `90`. Escala com Inteligência `50%` -> `80%`. Dano por Nível `50` -> `30`
  - *Golpe Desleal*: Dano Base `17` -> `50`. Escala com Inteligência `50%` -> `65%`. Cura por Nível `200` -> `100`
  - *Frenesi*: Dano Base `15` -> `90`, Escala com Inteligencia: `0%` -> `110%`
  - *Avanço com Escudo*: Dano base `10` -> `50`. Cura Base `60` -> `80`. Cura escala com inteligencia `80%` -> `120%`. Custo por nível `50` -> `10`. Cura por Nível `160` -> `120`
  - *Estande de Defesa*: Custo `60` -> `20`. Escala com Inteligencia `50%` -> `90%`. Custo por nível `20` -> `15`. Dano por Nível `67` -> `90`
  - *Parede De Aço*: Custo `80` -> `45`. Escala com Inteligencia `40%` -> `70%`. Custo por Nível `30` -> `20`. Dano por Nível `130` -> `150`. Cura Por Nível `50` -> `60`
  - *Proteção Corporal*: Custo `60` -> `40`. Dano base `12` -> `50`. Dano por Nível `40` -> `60`
  - *Nada Passará*: Custo `80` -> `65`. Escala com Inteligencia `50%` -> `70%`. Custo por nível `30` -> `20`

### Fixed

- Racas que dão bônus de vida e mana começam com sua vida e mana no máximo

## [4.0.0-BETA] - 04-02-2022

### Added

- O Mundo de Boleham está de Volta!